--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link href="http://www.star777.pillboxie.com/" rel="dns-prefetch">
     <link rel="amphtml" href="http://nobitabet.biz/gtb1/pillboxie/star777/" />  
     <meta name="google-site-verification" content="Bw4OQ79HEXOS2-BbrF8z-6cDairKVp9j46nGg8kG7pA" />
-    <title>Star777 | Link Alternatif Daftar Dan Login Terbaru Slot Star 777 Anti Nawala Gampang Menang Bonus New Member 20rb 2023</title>
-    <meta name="description" content="Star777 adalah platform link alternatif daftar dan login terbaru slot Star 777 gampang menang bonus new member 20rb perjudian online yang menawarkan pengalaman bermain slot yang menarik dan mengasyikkan." />
+    <title>Star777 | Link Utama Daftar Dan Login Terbaru Slot Star 777 Resmi Gampang Menang 2023</title>
+    <meta name="description" content="Star777 adalah platform link utama daftar dan login terbaru slot Star 777 gampang menang bonus new member 20rb perjudian online yang menawarkan pengalaman bermain slot yang menarik dan mengasyikkan." />
     <meta name="keywords" content="star777, star 777, daftar star777, login star777, alternatif star777, situs star777, star777 gacor, star777 rtp, star777 terpercaya" />
     <meta name="robots" content="index, follow" />
     <meta name="author" content="STAR777" />
@@ -48,16 +48,16 @@
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="id_ID" />
     <meta property="og:locale:alternate" content="en_ID" />
-    <meta property="og:title" content="Star777 | Link Alternatif Daftar Dan Login Terbaru Slot Star 777 Anti Nawala Gampang Menang Bonus New Member 20rb 2023" />
-    <meta property="og:description" content="Star777 adalah platform link alternatif daftar dan login terbaru slot Star 777 gampang menang bonus new member 20rb perjudian online yang menawarkan pengalaman bermain slot yang menarik dan mengasyikkan." />
+    <meta property="og:title" content="Star777 | Link Utama Daftar Dan Login Terbaru Slot Star 777 Resmi Gampang Menang 2023" />
+    <meta property="og:description" content="Star777 adalah platform link utama daftar dan login terbaru slot Star 777 gampang menang bonus new member 20rb perjudian online yang menawarkan pengalaman bermain slot yang menarik dan mengasyikkan." />
     <meta property="og:url" content="http://www.star777.pillboxie.com/">    
     <meta property="og:site_name" content="STAR777" />
     <meta property="og:image" content="https://i.ibb.co/BB7gMR0/link-alternatif-slot-star777.png" />
-    <meta property="og:image:alt" content="Star777 | Link Alternatif Daftar Dan Login Terbaru Slot Star 777 Anti Nawala Gampang Menang Bonus New Member 20rb 2023" />
-    <meta name="DC.Title" content="Star777 | Link Alternatif Daftar Dan Login Terbaru Slot Star 777 Anti Nawala Gampang Menang Bonus New Member 20rb 2023">
+    <meta property="og:image:alt" content="STAR777" />
+    <meta name="DC.Title" content="Star777 | Link Utama Daftar Dan Login Terbaru Slot Star 777 Resmi Gampang Menang 2023">
     <meta name="DC.Creator" content="STAR777">
     <meta name="DC.Subject" content="star777, star 777, daftar star777, login star777, alternatif star777, situs star777, star777 gacor, star777 rtp, star777 terpercaya">
-    <meta name="DC.Description" content="Star777 adalah platform link alternatif daftar dan login terbaru slot Star 777 gampang menang bonus new member 20rb perjudian online yang menawarkan pengalaman bermain slot yang menarik dan mengasyikkan.">
+    <meta name="DC.Description" content="Star777 adalah platform link utama daftar dan login terbaru slot Star 777 gampang menang bonus new member 20rb perjudian online yang menawarkan pengalaman bermain slot yang menarik dan mengasyikkan.">
     <meta name="DC.contributor" content="STAR777">
     <meta name="DC.Publisher" content="STAR777">
     <meta name="DC.Format" content="Website">
@@ -67,8 +67,8 @@
     <meta name="twitter:site" content="@STAR777">
     <meta name="twitter:creator" content="@STAR777">
     <meta name="twitter:domain" content="http://www.star777.pillboxie.com/">
-    <meta name="twitter:title" content="Star777 | Link Alternatif Daftar Dan Login Terbaru Slot Star 777 Anti Nawala Gampang Menang Bonus New Member 20rb 2023" />
-    <meta name="twitter:description" content="Star777 adalah platform link alternatif daftar dan login terbaru slot Star 777 gampang menang bonus new member 20rb perjudian online yang menawarkan pengalaman bermain slot yang menarik dan mengasyikkan.">
+    <meta name="twitter:title" content="Star777 | Link Utama Daftar Dan Login Terbaru Slot Star 777 Resmi Gampang Menang 2023" />
+    <meta name="twitter:description" content="Star777 adalah platform link utama daftar dan login terbaru slot Star 777 gampang menang bonus new member 20rb perjudian online yang menawarkan pengalaman bermain slot yang menarik dan mengasyikkan.">
     <meta name="twitter:image" content="https://i.ibb.co/BB7gMR0/link-alternatif-slot-star777.png">
     <link rel="shortcut icon" href="https://i.ibb.co/sqjgXDJ/ICON-NOBITABET-NEW.png" type="image/x-icon" />
     <link rel="preconnect dns-prefetch" href="https://fonts.gstatic.com/" crossorigin>
@@ -80,12 +80,53 @@
         "@context": "https://schema.org",
         "@type": "Organization",
         "name": "STAR777",
-        "alternateName": "Star777 | Link Alternatif Daftar Dan Login Terbaru Slot Star 777 Anti Nawala Gampang Menang Bonus New Member 20rb 2023",
+        "alternateName": "Star777 | Link Utama Daftar Dan Login Terbaru Slot Star 777 Resmi Gampang Menang 2023",
         "url": "http://www.star777.pillboxie.com/",
         "logo": "https://i.ibb.co/sqjgXDJ/ICON-NOBITABET-NEW.png",
-        "description": "Star777 adalah platform link alternatif daftar dan login terbaru slot Star 777 gampang menang bonus new member 20rb perjudian online yang menawarkan pengalaman bermain slot yang menarik dan mengasyikkan.",
+        "description": "Star777 adalah platform link utama daftar dan login terbaru slot Star 777 gampang menang bonus new member 20rb perjudian online yang menawarkan pengalaman bermain slot yang menarik dan mengasyikkan.",
         "sameAs": ["http://www.star777.pillboxie.com/"]
       }
+    </script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org/",
+      "@type": "WebSite",
+      "name": "STAR777",
+      "url": "http://www.star777.pillboxie.com/",
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": "http://www.star777.pillboxie.com/search?q={search_term_string}star777",
+        "query-input": "required name=search_term_string"
+      }
+    }
+    </script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Article",
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "http://www.star777.pillboxie.com/"
+      },
+      "headline": "Star777 | Link Utama Daftar Dan Login Terbaru Slot Star 777 Resmi Gampang Menang 2023",
+      "description": "Star777 adalah platform link utama daftar dan login terbaru slot Star 777 gampang menang bonus new member 20rb perjudian online yang menawarkan pengalaman bermain slot yang menarik dan mengasyikkan.",
+      "image": "https://i.ibb.co/BB7gMR0/link-alternatif-slot-star777.png",  
+      "author": {
+        "@type": "Organization",
+        "name": "NewsArticle",
+        "url": "http://www.star777.pillboxie.com/"
+      },  
+      "publisher": {
+        "@type": "Organization",
+        "name": "STAR777",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "http://www.star777.pillboxie.com/"
+        }
+      },
+      "datePublished": "2023-10-04",
+      "dateModified": "2023-10-11"
+    }
     </script>
   </head>
   <body>
@@ -188,11 +229,11 @@
         <div class="container">
           <header class="title">
             <h1 itemprop="headline">
-              <strong>Star777 | Link Alternatif Daftar Dan Login Terbaru Slot Star 777 Anti Nawala Gampang Menang Bonus New Member 20rb 2023</strong>
+              <strong>Star777 | Link Utama Daftar Dan Login Terbaru Slot Star 777 Resmi Gampang Menang 2023</strong>
             </h1>
           </header>
 
-<p style="text-align:justify"><strong><a href="http://www.star777.pillboxie.com/">Star777</a></strong> adalah platform link alternatif daftar dan login terbaru slot Star 777 gampang menang bonus new member 20rb perjudian online yang menawarkan pengalaman bermain slot yang menarik dan mengasyikkan. Dengan berbagai fitur unggulan dan bonus menarik, Star777 menjadi gerbang Anda menuju kemenangan mudah dalam permainan slot. Di Star777, Anda dapat menikmati berbagai jenis permainan slot yang dikembangkan oleh penyedia terkemuka seperti Pragmatic Play. Tidak hanya itu, Star777 juga menawarkan bonus anggota baru sebesar 20k pada tahun 2023.</p>
+<p style="text-align:justify"><strong><a href="http://www.star777.pillboxie.com/">Star777</a></strong> adalah platform link Utama daftar dan login terbaru slot Star 777 gampang menang bonus new member 20rb perjudian online yang menawarkan pengalaman bermain slot yang menarik dan mengasyikkan. Dengan berbagai fitur unggulan dan bonus menarik, Star777 menjadi gerbang Anda menuju kemenangan mudah dalam permainan slot. Di Star777, Anda dapat menikmati berbagai jenis permainan slot yang dikembangkan oleh penyedia terkemuka seperti Pragmatic Play. Tidak hanya itu, Star777 juga menawarkan bonus anggota baru sebesar 20k pada tahun 2023.</p>
 
 <h2 style="text-align:center"><strong>Cara Mendaftar dan Masuk ke Star777 Resmi</strong></h2>
 
@@ -227,9 +268,9 @@
 
 <p style="text-align:justify">Salah satu keuntungan besar yang ditawarkan oleh Star777 adalah bonus anggota baru sebesar 20k pada tahun 2023. Bonus ini dapat Anda klaim setelah berhasil mendaftar dan melakukan deposit pertama di Star777. Bonus anggota baru ini dapat digunakan untuk meningkatkan peluang Anda dalam memenangkan hadiah besar di permainan slot Star777. Pastikan Anda memanfaatkan bonus ini dengan bijak untuk mendapatkan pengalaman bermain yang lebih menguntungkan.</p>
 
-<h2 style="text-align:center"><strong>Alternatif Star777 untuk Permainan Slot Online</strong></h2>
+<h2 style="text-align:center"><strong>Utama Star777 untuk Permainan Slot Online</strong></h2>
 
-<p style="text-align:justify">Meskipun Star777 menawarkan pengalaman bermain slot yang menarik, tidak ada salahnya untuk mencari alternatif lain untuk variasi permainan yang lebih luas. Beberapa <strong><a href="http://www.star777.pillboxie.com/">link alternatif Star777</a></strong> terbaik untuk bermain slot online adalah Situs XYZ dan Situs ABC. Kedua situs ini menawarkan permainan slot yang berkualitas dengan fitur-fitur menarik dan bonus yang menggiurkan. Pastikan Anda mengeksplorasi semua pilihan yang ada sebelum memutuskan tempat bermain slot online Anda.</p>
+<p style="text-align:justify">Meskipun Star777 menawarkan pengalaman bermain slot yang menarik, tidak ada salahnya untuk mencari Utama lain untuk variasi permainan yang lebih luas. Beberapa <strong><a href="http://www.star777.pillboxie.com/">link Utama Star777</a></strong> terbaik untuk bermain slot online adalah Situs XYZ dan Situs ABC. Kedua situs ini menawarkan permainan slot yang berkualitas dengan fitur-fitur menarik dan bonus yang menggiurkan. Pastikan Anda mengeksplorasi semua pilihan yang ada sebelum memutuskan tempat bermain slot online Anda.</p>
 
 <h2 style="text-align:center"><strong>Memahami Keandalan dan Kepercayaan Star777</strong></h2>
 
